tests/ui/send.stderr
error[E0277]: `*const &()` cannot be sent between threads safely
  --> tests/ui/send.rs:11:40
   |
11 |         thread::scope(move |x| x.spawn(move || *sco.access(&FOO)).join()).unwrap()
   |                                  ----- -------^^^^^^^^^^^^^^^^^^
   |                                  |     |
   |                                  |     `*const &()` cannot be sent between threads safely
   |                                  |     within this `{closure@$DIR/tests/ui/send.rs:11:40: 11:47}`
   |                                  required by a bound introduced by this call
   |
   = help: within `{closure@$DIR/tests/ui/send.rs:11:40: 11:47}`, the trait `Send` is not implemented for `*const &()`
note: required because it appears within the type `PhantomData<*const &()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `LocalScope<'_>`
  --> src/lib.rs
   |
   | pub struct LocalScope<'a>(PhantomData<*const &'a ()>);
   |            ^^^^^^^^^^
note: required because it's used within this closure
  --> tests/ui/send.rs:11:40
   |
11 |         thread::scope(move |x| x.spawn(move || *sco.access(&FOO)).join()).unwrap()
   |                                        ^^^^^^^
note: required by a bound in `Scope::<'scope, 'env>::spawn`
  --> $RUST/std/src/thread/scoped.rs
   |
   |     pub fn spawn<F, T>(&'scope self, f: F) -> ScopedJoinHandle<'scope, T>
   |            ----- required by a bound in this associated function
   |     where
   |         F: FnOnce() -> T + Send + 'scope,
   |                            ^^^^ required by this bound in `Scope::<'scope, 'env>::spawn`
